# R-Type

./: .dockerignore  .gitignore  CMakeLists.txt  Core.cpp  Core.hpp  Dockerfile  README.md  build.bat  build.sh  buildMacos.sh  clean.bat  clean.sh  conanfile.txt  gametest.cpp  install.bat  install.sh  main.cpp  uninstall.sh
.github/workflows/: blank.yml  build.yml
Client/: CMakeLists.txt  Core.cpp  Core.hpp  main.cpp
Client/GameScene/: BackUpEnemy.cpp  BasicEnemy.cpp  EnemyBullet.cpp  FlyEememy.cpp  GameScene.cpp  GameScene.hpp  GameValues.hpp  HomeMenuScene.cpp  MediumEnemy.cpp  PlayerBullet.cpp  Powerup.cpp  SettingsMenu.hpp  VesselEnemyy.cpp
Client/GameScene/Enemy/: AEnemy.cpp  AEnemy.hpp  EnemyBullet.cpp  EnemyManager.cpp  EnemyManager.hpp  EnemyValues.hpp  IEnemy.hpp
Client/GameScene/Enemy/Basic/: BasicEnemy.cpp  BasicEnemy.hpp
Client/GameScene/Enemy/Boss/: BossEnemy.cpp  BossEnemy.hpp
Client/GameScene/Enemy/Boss2/: ScalingBossEnemy.cpp
Client/GameScene/Enemy/ChildBoss/: ChildBossEnemy.cpp  ChildBossEnemy.hpp
Client/GameScene/Enemy/Fly/: FlyEnemy.cpp  FlyEnemy.hpp
Client/GameScene/Enemy/Medium/: MediumEnemy.cpp  MediumEnemy.hpp
Client/GameScene/Enemy/ScalingBoss/: ScalingBossEnemy.cpp  ScalingBossEnemy.hpp
Client/GameScene/Enemy/Stupid/: StupidEnemy.cpp  StupidEnemy.hpp
Client/GameScene/Enemy/Vessel/: VesselEnemy.cpp  VesselEnemy.hpp
Client/GameScene/Menu/: HomeMenuScene.hpp
Client/MenuScene/: SettingsMenu.cpp
Client/Services/: Services.cpp  Services.hpp
Documentations/: Enemies.md  Levels.md  UDP's protocole.md  Usage.md
Server/: CMakeLists.txt  Core.cpp  Core.hpp  main.cpp
Server/GameScene/: BasicEnemy.cpp  GameScene.cpp  GameScene.hpp  PlayerBullet.cpp
Server/GameScene/Enemy/: AEnemy.hpp  EnemyBullet.cpp  EnemyManager.cpp
Server/GameScene/Enemy/Basic/: BasicEnemy.cpp
Server/GameScene/Enemy/Medium/: MediumEnemy.hpp
Server/MenuScene/: HomeMenuScene.cpp  SettingsMenu.cpp
Server/Services/: Services.cpp  Services.hpp
assets/: wave.txt
bootstrap_ecs/: ComponentMap.h  exo0.cpp  exo1.cpp  exo2.cpp  exo3.cpp
bootstrap_ecs/components/container/: ComponentManager.hpp  ComponentMap.hpp  IComponentMap.hpp
bootstrap_ecs/components/content/: Movement.hpp  Render.hpp
bootstrap_ecs/ecs/components/container/: ComponentManager.hpp
bootstrap_ecs/ecs/entity/: EntityManager.cpp
bootstrap_ecs/ecs/systems/render/: ARenderSystem.hpp  IRenderSystem.hpp  RenderSystem.hpp
cfg/: config.hpp  config.hpp.in
client/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  rtype
client/ecs/: Archi.mdj
client/ecs/components/container/: ComponentManager.hpp
client/ecs/components/content/: Action.hpp  Animation.hpp  Collision.hpp  Movement.hpp  Sound.hpp  Text.hpp
client/ecs/entity/: EntityManager.hpp
client/ecs/scene/: IScene.hpp
client/ecs/systems/: ISystem.hpp
client/ecs/systems/client/: AClientSystem.hpp  ClientSystem.hpp
client/ecs/systems/input/: SfmlInputSystem.hpp
client/ecs/systems/render/: SfmlRenderSystem.hpp
client/ecs/systems/storage/: Storage.hpp
client/src/: CMakeLists.txt  Core.cpp  main.cpp  test_client.cpp
client/src/GameScene/: BasicEnemy.cpp  GameScene.cpp  GameScene.hpp  PlayerBullet.cpp
ecs/: Archi.mdj  CMakeLists.txt  ICore.hpp  ecs_doxygen
ecs/components/container/: ComponentManager.cpp  ComponentManager.hpp  ComponentMap.hpp  IComponentMap.hpp
ecs/components/content/: Action.cpp  Action.hpp  Animation.cpp  Animation.hpp  Button.hpp  Collision.hpp  InputButton.hpp  Movement.cpp  Movement.hpp  Network.hpp  Sound.hpp  Sprite.cpp  Sprite.hpp  Text.hpp
ecs/core/: ACore.hpp  ICore.hpp
ecs/entity/: Entity.hpp  EntityManager.cpp  EntityManager.hpp
ecs/scene/: AMenu.hpp  AScene.hpp  IScene.hpp
ecs/storage/: Storage.hpp
ecs/systems/: ISystem.hpp
ecs/systems/client/: AClientSystem.hpp  ClientSystem.hpp
ecs/systems/game/: AGameSystem.cpp  AGameSystem.hpp  RTypeGameSystem.cpp  RTypeGameSystem.hpp
ecs/systems/input/: AInputSystem.hpp  IInputSystem.hpp  SfmlInputSystem.cpp  SfmlInputSystem.hpp
ecs/systems/network/Serialize/: Serialize.hpp
ecs/systems/network/serialize/: Serialize.hpp
ecs/systems/network/services/: AServices.hpp  IServices.hpp  Services.hpp
ecs/systems/network/tcpClient/: ATcpClientSystem.cpp  ATcpClientSystem.hpp  TcpClientSystem.cpp  TcpClientSystem.hpp
ecs/systems/network/tcpServer/: ATcpServerSystem.cpp  ATcpServerSystem.hpp  TcpServerSystem.cpp  TcpServerSystem.hpp
ecs/systems/network/udpClient/: AUdpClientSystem.cpp  AUdpClientSystem.hpp  UdpClientSystem.cpp  UdpClientSystem.hpp
ecs/systems/network/udpServer/: AUdpServerSystem.cpp  AUdpServerSystem.hpp  UdpServerSystem.cpp  UdpServerSystem.hpp
ecs/systems/render/: ARenderSystem.cpp  ARenderSystem.hpp  IRenderSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  SfmlRenderSystem.cpp  SfmlRenderSystem.hpp
ecs/systems/server/: ServerSystem.hpp
ecs/systems/storage/: Storage.hpp
ecs/systems/tcpClient/: TcpClientSystem.hpp
ecs/systems/tcpServer/: TcpServerSystem.hpp
ecs/systems/udpClient/: UdpClientSystem.hpp
ecs/systems/udpServer/: UdpServerSystem.hpp
server/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  rtype
server/ecs/: ecs_doxygen
server/src/: CMakeLists.txt  Core.cpp
server/src/GameScene/: GameScene.cpp
src/: CMakeLists.txt  Core.cpp  Core.hpp  Makefile  cmake_install.cmake
src/GameScene/: BasicEnemy.cpp  GameScene.cpp  GameScene.hpp  HomeMenuScene.cpp  HomeMenuScene.hpp  PlayerBullet.cpp  SettingsMenu.cpp  SettingsMenu.hpp
src/TcpClient/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
src/TcpClient/Client/: Client.cpp  Client.hpp
src/TcpServer/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
src/TcpServer/ClientServer/: ClientServer.cpp  ClientServer.hpp
src/TcpServer/Server/: TcpServer.cpp  TcpServer.hpp
src/UdpServer/: CMakeLists.txt  Makefile  UdpServer.cpp  UdpServer.hpp  cmake_install.cmake  main.cpp  udpserver
src/client/: CMakeLists.txt  test_client.cpp
src/server/: CMakeLists.txt  test.cpp
(+5 files in other folders)
