# # set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
# # set(VCPKG_ROOT $(CMAKE_CURRENT_SOURCE_DIR)/vcpkg)
# # include("${VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake")

# # list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")

CMAKE_MINIMUM_REQUIRED(VERSION 3.17)

project(rtype LANGUAGES CXX)

set(ENV{ROOT_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
set(CORE ${CMAKE_CURRENT_SOURCE_DIR}/src)

add_subdirectory(${CORE}/)
