CMAKE_MINIMUM_REQUIRED(VERSION 3.19)

project(rtypeserver LANGUAGES CXX)

set(BIN_NAME r-type_server)

set(CMAKE_CXX_STANDARD 17)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_executable(${BIN_NAME} test.cpp)

set_property(TARGET ${BIN_NAME} PROPERTY CXX_STANDARD 17)
